  forking is needed.  The command-line options -i, -p and
  --sequence=STRATEGY are ignored for backwards compatibility.
+ Recode does not include libiconv anymore, but uses an external iconv
  library if one was available at installation time.  The -x: option
  to the program, or a new flag to the library recode_new_outer
  function, inhibits the initialisation and usage of iconv.
+ Many bug fixes.
+ Long ago, I renamed GNU recode to Free recode: the permission for
  using the GNU prefix mandated a level of obedience to the FSF that
  once went overboard, in my opinion.  After that change, I realized
  that some people read Free as a four letter word!  To be peaceful,
  this version changes the name again, to merely Recode.  recode
  (no capital) still names the executable program specifically, or
  the distribution archive itself.
+ make check accepts a LIMIT= option, for limiting tests to one or a
  few cases.  See tests/Makefile.am.
+ PO files have been updated from the Translation Project.
+ The test system has been overhauled.  Tests now run much faster, and
  require Python and Cython.
+ Overhauled build system, now using gnulib for portability.  This reduces
  the amount of code in the Recode tree considerably.


Version 3.6
===========

:Author: François Pinard, Bruno Haible, 2001-01.

General changes
---------------

+ The recode manual is now indexed, by charset, by concept, etc.
+ Program messages are also available in Greek, Gallicean and Italian.
+ Bruno Haible's nice portable iconv library has been integrated.
+ RFC 1345 tables and French character names have been updated.
+ The Texinfo charset has been refreshed, and made reversible.

New charsets
------------

(most from libiconv)

+ Japanese

  + EUC-JP (csEUCPkdFmtJapanese, EUC_JP,
    Extended_UNIX_Code_Packed_Format_for_Japanese);
  + ISO-2022-JP (csISO2022JP); ISO-2022-JP-1; ISO-2022-JP-2 (csISO2022JP2);
  + JIS_C6220-1969-ro (csISO14JISC6220ro, ISO646-JP, iso-ir-14, jp);